Add classes to working with files and json

--- a/CablesCraftMobile/CablesCraftMobile.csproj
+++ b/CablesCraftMobile/CablesCraftMobile.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="DataWorkers\" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Cables">
