Refactoring some hardcode. Realize saving current page when exit application (with reflection).

--- a/CablesCraftMobile/CablesCraftMobile.csproj
+++ b/CablesCraftMobile/CablesCraftMobile.csproj
@@ -25,4 +25,12 @@
       <HintPath>..\..\Cables\Cables\bin\Debug\netstandard2.0\Cables.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="JsonDataFiles\twistInfo.json" />
+    <None Remove="JsonDataFiles\reels.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="JsonDataFiles\twistInfo.json" />
+    <EmbeddedResource Include="JsonDataFiles\reels.json" />
+  </ItemGroup>
 </Project>
