Write save and load methods for twist. Has exception when saving. Nesessary to fix.

--- a/CablesCraftMobile/CablesCraftMobile.csproj
+++ b/CablesCraftMobile/CablesCraftMobile.csproj
@@ -33,7 +33,7 @@
     <None Remove="JsonDataFiles\windingMode.json" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="JsonDataFiles\windingMode.json" />
+    <EmbeddedResource Include="JsonDataFiles\twistMode.json" />
     <EmbeddedResource Include="JsonDataFiles\twistInfo.json" />
     <EmbeddedResource Include="JsonDataFiles\reels.json" />
     <EmbeddedResource Include="JsonDataFiles\appData.json" />
