Big refactoring. Finish to develop 2 parts: Twist and Braiding. They work correct.

--- a/CablesCraftMobile/JsonDataFiles/appData.json
+++ b/CablesCraftMobile/JsonDataFiles/appData.json
@@ -1,4 +1,26 @@
 ﻿{
+  "Twist":
+  {
+    "TypeOfTwistCollection":
+    [
+      {
+        "Name": "Одиночный",
+        "TwistedElementType": "single"
+      },
+      {
+        "Name": "Пара",
+        "TwistedElementType": "pair"
+      },
+      {
+        "Name": "Тройка",
+        "TwistedElementType": "triple"
+      },
+      {
+        "Name": "Четвёрка",
+        "TwistedElementType": "four"
+      }
+    ]
+  },
   "Braiding":
   {
     "CoilsCountCollection": [ 16, 24, 36 ],
