Big Refactoring. Realize Binding for Winding part.

--- a/CablesCraftMobile/CablesCraftMobile.csproj
+++ b/CablesCraftMobile/CablesCraftMobile.csproj
@@ -39,5 +39,6 @@
     <EmbeddedResource Include="JsonDataFiles\reels.json" />
     <EmbeddedResource Include="JsonDataFiles\appData.json" />
     <EmbeddedResource Include="JsonDataFiles\braidingMode.json" />
+    <EmbeddedResource Include="JsonDataFiles\windingMode.json" />
   </ItemGroup>
 </Project>
