--- a/CablesCraftMobile.Android/Properties/AndroidManifest.xml
+++ b/CablesCraftMobile.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.spcable.cablescraftmobile">
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
-	<application android:label="CablesCraftMobile.Android" android:theme="@style/MainTheme"></application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="3.1" package="com.spcable.cablescraftmobile" android:versionCode="3">
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="29" />
+	<application android:label="CablesCraftMobile.Android" android:theme="@style/MainTheme" android:icon="@drawable/spcableiconandroid120x120"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
