--- a/CablesCraftMobile/JsonDataFiles/appData.json
+++ b/CablesCraftMobile/JsonDataFiles/appData.json
@@ -150,7 +150,7 @@
   {
     "CoilsCountCollection": [ 16, 24, 36 ],
     "WiresCountCollection": [ 3, 4, 5, 6, 7, 8, 9, 10 ],
-    "WiresDiametersCollection": [ 0.12, 0.15, 0.20, 0.26, 0.30 ],
+    "WiresDiametersCollection": [ 0.12, 0.15, 0.20, 0.26, 0.30, 0.40, 0.50 ],
     "WiresMaterialsCollection":
     [
       {
